adattamento gestione errori gateway (INIPEC)